--- a/client/src/app/app.component.css
+++ b/client/src/app/app.component.css
@@ -1,17 +1,102 @@
-.app-content {
-  width: 100%;
-  height: 100%;
-  box-sizing: border-box;
+nav {
+  background: rgba(255, 255, 255, 0.87);
 }
 
-.app-gpx-upload {
+a {
+  color: rgba(255, 255, 255, 0.87);
+}
+
+.nav-content {
+  display: block;
+  position: relative;
+  top: 0px;
+  left: 0px;
+  width: 100vw;
+  height: 80px;
+  z-index: 2;
+}
+
+.app-content {
+  display: block;
+  position: relative;
+  top: 0px;
+  left: 0px;
+  width: 100vw;
+  height: 100vh;
+  z-index: 1;
+}
+
+.app-toolbar {
+  display: block;
+  position: absolute;
+  top: 0px;
+  left: 0px;
   width: auto;
   height: 120px;
   background: transparent;
+  z-index: 2;
+}
+
+.app-forest {
+  display: block;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 100vw;
+  height: 100vh;
+  background: transparent;
+  z-index: 2;
+}
+
+.app-gpx-upload {
+  display: block;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 100vw;
+  height: 100vh;
+  background: transparent;
+  z-index: 2;
 }
 
 .app-map {
+  display: block;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  z-index: 1;
   width: 100vw;
   height: 100vh;
-  background: teal;
+  background: transparent;
+}
+
+.mainButtonsContainer {
+  display: flex;
+  position: relative;
+  flex-direction: 'row';
+  justify-content: 'flex-start';
+  height: 25px;
+  margin-left: 40px;
+}
+
+.mainButton {
+  display: block;
+  padding: 0px;
+  margin: 0px;
+  width: 40px;
+  height: 40px;
+}
+
+.toolbarContainer {
+  display: flex;
+  width: 100vw;
+  height: auto;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.userContainer {
+  margin-right: 20px;
+  font-size: 14px;
+  font-weight: normal;
 }
