--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,14 +1,19 @@
 <mat-sidenav-container fullscreen>
   <mat-sidenav #sidenav>
     <mat-nav-list>
-      <a mat-list-item href="https://luixaviles.com" target="_blank">
+      <a mat-list-item href="/forest" target="_blank">
+        <mat-icon mat-list-icon>person</mat-icon>
+        <span mat-line>Forest</span>
+      </a>
+      <a mat-list-item href="/map" target="_blank">
+        <mat-icon mat-list-icon>person</mat-icon>
+        <span mat-line>Map</span>
+      </a>
+      <a mat-list-item href="https://headwinds.now.sh" target="_blank">
         <mat-icon mat-list-icon>person</mat-icon>
         <span mat-line>Author</span>
       </a>
-      <a mat-list-item href="https://github.com/luixaviles/socket-io-typescript-chat" target="_blank">
-        <mat-icon mat-list-icon>code</mat-icon>
-        <span mat-line>Source Code</span>
-      </a>
+      <h2>Credit</h2>
       <a mat-list-item href="https://medium.com/dailyjs/real-time-apps-with-typescript-integrating-web-sockets-node-angular-e2b57cbd1ec1" target="_blank">
         <mat-icon mat-list-icon>web</mat-icon>
         <span mat-line>Blog Post</span>
@@ -17,20 +22,34 @@
   </mat-sidenav>
 
   <div>
-    <mat-toolbar color="primary">
-      <button mat-icon-button (click)="sidenav.toggle()">
-      <mat-icon>menu</mat-icon>
-    </button>
-      <span>mapdrops</span>
-    </mat-toolbar>
+    <div class="nav-content">
+      <mat-toolbar color="primary">
+        <!--
+        <button mat-icon-button (click)="sidenav.toggle()">
+          <mat-icon>menu</mat-icon>
+        </button>
+      -->
+      <div class="toolbarContainer">
+      <div class="appTitle">
+        <span>{{title}}</span>
+      </div>
 
+        <div class="mainButtonsContainer">
+          <div class="mainButton">
+            <a routerLink="/forest" routerLinkActive="active"><mat-icon mat-list-icon>map</mat-icon></a>
+          </div>
+          <div class="mainButton">
+            <a routerLink="/map" routerLinkActive="active"><mat-icon mat-list-icon>timeline</mat-icon></a>
+          <!--<a routerLink="/map" routerLinkActive="active"><mat-icon mat-list-icon>equalizer</mat-icon>charts</a>-->
+          </div>
+        </div>
+        <div class="userContainer">
+          <span>{{username}}</span>
+        </div>
+      </div>
+      </mat-toolbar>
+    </div>
     <div class="app-content">
-      <div class="app-gpx-upload">
-        <tcc-gpx></tcc-gpx>
-      </div>
-      <div class="app-map">
-        <map-box></map-box>
-      </div>
       <router-outlet></router-outlet>
     </div>
   </div>
