--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -1,4 +1,72 @@
 /* You can add global styles to this file, and also import other style files */
+@import '~@angular/material/prebuilt-themes/pink-bluegrey.css';
+
 body {
   font-family: Helvetica;
+  background-color: #5dbec6;
+}
+
+.mat-drawer-container {
+  background-color: #5dbec6 !important;
+}
+
+.mat-toolbar {
+  background-color: #5dbec6 !important;
+  color: #fff !important;
+}
+.mat-primary {
+  background-color: #5dbec6 !important;
+  color: #fff !important;
+}
+
+.mat-card {
+  background-color: #5dbec6 !important;
+  border: none !important;
+  box-shadow: none !important;
+}
+
+.mat-dialog-container {
+  box-shadow: none !important;
+  color: rgba(0, 0, 0, 0.8) !important;
+  background-color: #71d0c3 !important;
+  font-family: 'Roboto' !important;
+  font-weight: 400 !important;
+  font-size: 20px !important;
+}
+
+.mat-button-wrapper {
+  font-size: 14px !important;
+}
+
+.node {
+  cursor: pointer;
+}
+
+.node circle {
+  /*fill: #fff;
+                stroke: steelblue;*/
+  stroke-width: 3px;
+}
+
+.node text {
+  font: 12px sans-serif;
+  fill: #000;
+}
+
+.link {
+  fill: none;
+  stroke: #ccc;
+  stroke-width: 2px;
+}
+
+.tree {
+  margin-bottom: 10px;
+  overflow: auto;
+}
+
+.link {
+  fill: none;
+  stroke: #555;
+  stroke-opacity: 0.4;
+  stroke-width: 1.5px;
 }
