--- a/client/src/app/app.component.css
+++ b/client/src/app/app.component.css
@@ -9,11 +9,11 @@ a {
 .nav-content {
   display: block;
   position: relative;
-  top: 0px;
-  left: 0px;
   width: 100vw;
-  height: 80px;
+  height: 100px;
   z-index: 2;
+  margin: 10px;
+  padding: 10px;
 }
 
 .app-content {
