--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -6,6 +6,20 @@ body {
   background-color: #5dbec6;
 }
 
+button {
+  padding: 5px;
+  height: 24px;
+  background-color: white;
+  opacity: 0.7;
+  border: none;
+}
+
+input {
+  padding: 5px;
+  outline: none;
+  border: none;
+}
+
 .mat-drawer-container {
   background-color: #5dbec6 !important;
 }
