sometime one needs to step back to see the forest for the trees

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -7,10 +7,10 @@
 
         <div class="mainButtonsContainer">
           <div class="mainButton">
-            <a routerLink="/forest" routerLinkActive="active"><mat-icon mat-list-icon>map</mat-icon></a>
+            <a routerLink="/map" routerLinkActive="active"><mat-icon mat-list-icon>map</mat-icon></a>
           </div>
           <div class="mainButton">
-            <a routerLink="/map" routerLinkActive="active"><mat-icon mat-list-icon>timeline</mat-icon></a>
+            <a routerLink="/world" routerLinkActive="active"><mat-icon mat-list-icon>timeline</mat-icon></a>
           <!--<a routerLink="/map" routerLinkActive="active"><mat-icon mat-list-icon>equalizer</mat-icon>charts</a>-->
           </div>
         </div>
