--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,9 +1,9 @@
   <div>
     <div class="nav-content">
       <div class="toolbarContainer">
-      <div class="appTitle">
-        <span>{{title}}</span>
-      </div>
+        <div class="appTitle">
+          <span>{{title}}</span>
+        </div>
 
         <div class="mainButtonsContainer">
           <div class="mainButton">
@@ -19,6 +19,7 @@
 
     </div>
     <div class="app-content">
+      <pilot></pilot>
       <router-outlet></router-outlet>
     </div>
   </div>
